# sdl-cmake-ci-boilerplate

./: CMakeLists.txt  README.md  gen_cmake.py
.github/workflows/: build-and-test.yml  build.yml
cmake/: config.cmake.in
source/: CMakeLists.txt
source/cute/: CMakeLists.txt  cute.cpp  cute.h  cute.impl.h
source/example/: CMakeLists.txt  example.c  example.cpp
source/test/integration/fetch_content/: CMakeLists.txt
source/test/integration/find_package/: CMakeLists.txt
source/test/integration/find_package/source/: CMakeLists.txt  main.cpp
source/test/unittests/: CMakeLists.txt  cute.test.cpp
tools/: gen-cmake.py
